duniverse/menhirLib.20200211/test/static/good/symbolstartofs.mly
%token A B
%start<unit> main
%%
main: A B { $symbolstartofs }
