duniverse/menhirLib.20200211/test/static/bad/no-start-symbol.mly
%token MACHIN

%%

main:
  MACHIN
    { $1 }

